Fix invisible node help page.

--- a/editor/css/describe.css
+++ b/editor/css/describe.css
@@ -6,7 +6,6 @@
   width: 100%;
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.9);
-  position: relative;
   overflow: auto;
 }
 
